# docker-compose-files

./: .doco-cd.g4-gpu.yaml  .doco-cd.openmediavault.yaml  .doco-cd.vm1.yaml  .pre-commit-config.yaml  .sops.yaml  README.md  renovate.json
.github/: renovate-bot.json
audiobookshelf/: compose.yaml
autobrr/: compose.yaml
autoheal/: compose.yaml
bazarr/: compose.yaml
bentopdf/: compose.yaml
calibre-web/: .env  compose.yaml
consul/: compose.yaml
cross-seed/: compose.yaml
cyd-immich/: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
cyd-immich/docs/: architecture.md  handoff.md  service-api.md
cyd-immich/esphome/: .env  README.md  cyd-immich-memories.yaml
cyd-immich/src/cyd_immich_proxy/: __init__.py  config.py  immich.py  main.py
cyd-monitor/: Dockerfile  compose.yaml  metrics_exporter.py
doco-cd/: .env  README.md  compose.yaml  poll-now.sh
dovecot/: .env  compose.yaml
escher/: Dockerfile  compose.yaml  package.json  server.js
fr24feed/: .env  compose.yaml
freshrss/: .env  compose.yaml
frigate/: .env  compose.yaml
getmail6/: Dockerfile  compose.yaml  entrypoint.sh
headscale/: compose.yaml
homarr/: .env  compose.yaml
homeassistant/: .env  compose.yaml
immich/: .env  compose.yaml  hwaccel.ml.yml  hwaccel.transcoding.yml
jellyfin/: compose.yaml
joplin/: .env  compose.yaml
kapowarr/: compose.yaml
karakeep/: .env  compose.yaml
komga/: compose.yaml
lidarr/: compose.yaml
mosquitto/: compose.yaml
myanonamouse/: compose.yaml
navidrome/: compose.yaml
nextcloud/: compose.yaml  db.env
paperless-ngx/: .env  (+1 more)
(+62 files in other folders)
