[project]
name = "cyd-immich-proxy"
version = "0.1.0"
description = "Immich on-this-day image proxy for CYD displays"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pillow>=11.0.0,<12.0.0",
  "pillow-heif>=1.3.0,<1.4.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyd_immich_proxy"]
